--- a/main.html
+++ b/main.html
@@ -7,6 +7,28 @@
 </head>
 
 <body>
+	<header>RRR</header>
+	<nav>
+		<a href="#" id="nav-actor">Heros</a>
+		
+		<a href="#" id="nav-quote">Quotes</a>
+		<summary>RRR movie about the how two bestfriends turns as enimies </summary>
+		<section id="actor">
+			Main actor in the movie is NTR,Ram charan.They got awards for acting skils.
+		</section>
+		<section id="quote">
+			The best quote recieved  movie from AP CM jagan 
+		</section>
+		<aside>
+			IMDb rating is 8.5
+			<br>
+			Release date: 25th march 2022
+		</aside>
+		<footer>
+			Producer of the movie is DVV danayya
+		</footer>
+		
+	</nav>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
