--- a/main.html
+++ b/main.html
@@ -9,9 +9,9 @@
 <body>
 	<header>RRR</header>
 	<nav>
-		<a href="#" id="nav-actor">Heros</a>
+		<a href="#actor" id="nav-actor">Heros</a>
 		
-		<a href="#" id="nav-quote">Quotes</a>
+		<a href="#quote" id="nav-quote">Quotes</a>
 		<summary>RRR movie about the how two bestfriends turns as enimies </summary>
 		<section id="actor">
 			Main actor in the movie is NTR,Ram charan.They got awards for acting skils.
