--- a/main.html
+++ b/main.html
@@ -22,11 +22,10 @@
 		</section>
 		<aside>
 			IMDb rating is 8.5
-			<br>
 			Release date: 25th march 2022
 		</aside>
 		<footer>
-			Producer of the movie is DVV danayya
+			Produced by: DVV Danayya
 		</footer>
 		
 	<!-- the entire body must be written by student -->
